# cross-lingual-data-augmentation-for-thai-qa

./: .gitignore  01_Prepare_Dataset.ipynb  02_Backtranslate_English.ipynb  02_Thai_Augmentation.ipynb  03_Augment_LLM.py  03_Thai_Augmentation.ipynb  04_Paraphrase_QCPG.ipynb  05_Augment_Thai.ipynb  05_Augment_Thai.py  06_Calculate_Distance.ipynb  08_benchmark_qa.py  09_Analysis.ipynb  LICENSE  README.md  benchmark_qa.py  benchmark_reqa.py  benchmark_reqa_results.csv  compute_qa_sig.py  delete_repos.py  environment.yml  pyproject.toml  requirements.txt  test.ipynb  utils.py
claq/: base.py  crossaug.py  data.py  main.py  utils.py
claq/cli/: augment.py  data.py
contexts/: 01_Prepare_Dataset.ipynb  02_Backtranslate_English.ipynb  03_Augment_LLAMA.py  03_Augment_LLM_ai21.py  04_Paraphrase_QCPG.ipynb  05_Augment_Thai.py  06_Calculate_Distance.ipynb  07_Benchmark_ReQA.ipynb  09_Analysis.ipynb  easytranslate.py  utils.py
contexts/data/: 05_augment_thai_ltw2v_aug.csv  05_augment_thai_thai2fit_aug.csv
data/: 03_augment_llm_gec.csv  03_augment_llm_paraphrase.csv  05_augment_thai_thai2trans_aug.csv  05_augment_thai_wordnet_aug.csv
notebooks/: 04_Paraphrase_QCPG.ipynb  07_Benchmark_ReQA.ipynb
questions/: 04_Paraphrase_QCPG.ipynb  06_Calculate_Distance.ipynb  07_Benchmark_ReQA.ipynb  09_Analysis.ipynb  temp.csv  utils.py
results/: 07_benchmark_reqa.csv  benchmark_reqa.csv  cosine_distance.csv  cosine_distance.tex  error_analysis_compare.tex  mrc_analysis.ipynb  mrc_cosine_distance.csv  reqa_analysis.ipynb  slem.csv  slem.tex
scripts/: run_qa.py
(+7 files in other folders)
