[tool.poetry]
name = "claq"
version = "0.1.0"
description = "Cross-lingual Data Augmentation for Question Answering in Low Resource Langagues Framework"
authors = ["Parinthapat Pengpun <parinzee@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
